# gst-srt

./: .gitignore  Makefile.am  compile_commands.json  configure.ac  gst-srt.sln
gst-srt/: Makefile.am  gst-srt.vcxproj  gst-srt.vcxproj.filters  gstsrt.c  gstsrt.h  gstsrtbasesink.c  gstsrtbasesink.h  gstsrtbasesrc.c  gstsrtbasesrc.h  gstsrtclientsink.c  gstsrtclientsink.h  gstsrtclientsrc.c  gstsrtclientsrc.h  gstsrtmeta.c  gstsrtmeta.h  gstsrtserversink.c  gstsrtserversink.h  gstsrtserversrc.c  gstsrtserversrc.h
gst-srt/x64/Release/gst-srt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gst-srt.lastbuildstate  gst-srt.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: gst-srt.exp  gst-srt.ilk  vc141.idb
x64/Debug/gst-srt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gst-srt.lastbuildstate  gst-srt.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: gst-srt.exp  gst-srt.iobj  gst-srt.ipdb
x64/Release/gst-srt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gst-srt.lastbuildstate  gst-srt.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
